updating to keep java 8 compatibility